// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`renders correctly for player 1 1`] = `
<View
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    [
      {
        "alignItems": "center",
        "backgroundColor": "#FAF8F8",
        "borderRadius": 80,
        "height": 160,
        "justifyContent": "center",
        "margin": 8,
        "paddingHorizontal": 20,
        "paddingVertical": 12,
        "width": 160,
      },
      {
        "alignSelf": "flex-start",
        "transform": [
          {
            "rotate": "180deg",
          },
        ],
      },
    ]
  }
  testID="add-button-1"
>
  <Text
    style={
      [
        {
          "fontSize": 48,
          "fontWeight": "bold",
          "textAlign": "center",
        },
        {
          "color": "#4C9D00",
        },
      ]
    }
  >
    +
  </Text>
</View>
`;

exports[`renders correctly for player 2 1`] = `
<View
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    [
      {
        "alignItems": "center",
        "backgroundColor": "#FAF8F8",
        "borderRadius": 80,
        "height": 160,
        "justifyContent": "center",
        "margin": 8,
        "paddingHorizontal": 20,
        "paddingVertical": 12,
        "width": 160,
      },
      {
        "alignSelf": "flex-end",
      },
    ]
  }
  testID="add-button-2"
>
  <Text
    style={
      [
        {
          "fontSize": 48,
          "fontWeight": "bold",
          "textAlign": "center",
        },
        {
          "color": "#0073E6",
        },
      ]
    }
  >
    +
  </Text>
</View>
`;
